Simple fix for text-overflow on tabs
Setting `display: inline-block` will solve the problem, could by any other than `flex` or `inline-flex`, but `inline-block` is the suitable for this context.

--- a/css/tabstrip.css
+++ b/css/tabstrip.css
@@ -112,6 +112,7 @@
 
 .tab > .title {
   flex-grow: 1;
+  display: inline-block;
   width: 0;
   text-overflow: ellipsis;
   overflow-x: hidden;
